--- a/src/assets/templates/story/story-a.html
+++ b/src/assets/templates/story/story-a.html
@@ -15,6 +15,15 @@
           ]
         },
       ]
+    },
+    fileStructure: {
+      nonSpoiler: {
+        "non-spoiler-overview": "default"
+      },
+      spoiler: {
+        "spoiler-overview": "Overview",
+        "spoiler-relationships": "Relationships"
+      }
     }
   }
 
@@ -125,12 +134,10 @@
         }
       }
     }
-
   }
 </script>
 
 <!-- File Content -->
-
 
 <div id="non-spoiler">
 
@@ -168,13 +175,14 @@
     ## Fire Resistance
     Ability to resist intense heat. Inherited from his mother.
   </div>
+
 </div>
 
 
 <div id="spoiler">
 
   <div id="spoiler-overview" class="page-tab">
-    
+
     Ethan Morales is the Main Protagonist of the novel "The Birth of a Hero" and the the central point of the story. He is a student studying in U.H.A. and is part of E-Class.
 
     He and his family are Desterian Immigrants who migrated to Arlika in order to seek a better life. The first six years of his life was spent in Desteria, witnessing the cruelty of drug cartels and the ghetto, caused a life-long influenced on Ethan's psyche that even he didn't knew he had.
@@ -182,6 +190,7 @@
     As a child, he always wanted to become a hero because of the stories that his mother told him. She taught in him the virtues of a Hero and what it means to be good. As a result, he grew up wanting to be one. He trained his abilities for most of his days and even going so far as becoming a vigilante with his best friend Kevin and Vanessa, albeit only fighting petty crimes like thievery, mugging, and bullying. But his motivation later became sinister when an accident led to him having to choose which one of his friend he had to sacrifice, followed by the destruction of the town they were in at the time, permanently scarring Ethan's mind and turning him into a sociopath.
 
     [[toc]]
+
     # Appearance
     Ethan is a Desterian Teenager. Like most Desterian, he has dark hair and light beige skin. His eyes are orange-red, inherited from his mother and he has a tall build, inherited from his dad. His eyebrows are thin like his mother and his nose is straight from his father's. His hair is kept slightly long, giving him a pair of bangs on his forehead.
 
@@ -203,7 +212,6 @@
     Ethan is a good person at heart. He was raised by his parents to be kind, courageous, and heroic. While his parents never told him to become a hero, he saw through the lines of what they subconsciously wanted him to become.
     
     But his motivation changed into a desire to murder the Villain that tortured him and stole the powers of Vanessa. He enrolled into UHA in order to train himself. He aimed to achieved the following.
-
     * Complete Mastery over Creation
     * Study the Abilities of his classmates and copy useful ones
     * Befriend anyone with interesting and useful research, i.e. the biology, inventor, and research club.
@@ -228,7 +236,6 @@
     # Equipment
     # Trivia
     # Gallery
-
 
   </div>
 
